# forensic-llm-wiki-obsidian

./: .env.example  .gitignore  .pre-commit-config.yaml  CASE_STUDY.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  fw.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
assets/: architecture.mmd  demo_flow.md  method_comparison_table.md  rag_vs_llm_wiki.mmd
benchmark_results/case_002_evolving/: evolution_report.md  method_comparison.md  results.md
benchmark_results/case_003_adversarial_overclaim/: results.md
docs/: agent_demo.md  architecture.md  benchmark_methodology.md  demo_script.md  demo_video_script.md  human_review.md  interview_talking_points.md  launch_checklist.md  llm_wiki_vs_rag_vs_graphrag.md  mcp_setup.md  obsidian_workflow.md  rag_vs_llm_wiki.md  threats_to_validity.md  why_llm_wiki.md
evals/: case_001_eval.json  case_002_evolving_eval.json  case_002_evolving_methods_eval.json  case_003_adversarial_overclaim_eval.json
examples/: demo_commands.sh  demo_expected_output.md  live_llm_smoke_test.md  sample_questions.md
examples/live_runs/: 2026-07-09_claude-sonnet-4-6.md
examples/obsidian_vault_case_002/: README.md  contradictions.md  entities.md  final_report.md  hypotheses.md  index.md  iocs.md  open_questions.md  timeline.md
examples/obsidian_vault_case_002_evolving/: README_FOR_OBSIDIAN.md  contradictions.md  entities.md  final_report.md  graph.mmd  hypotheses.md  index.md  iocs.md  open_questions.md  timeline.md
examples/obsidian_vault_template/: README_FOR_OBSIDIAN.md
mcp_server/: README.md  __init__.py  schemas.py  server.py  tools.py
raw_sources/case_001/: defender_scan.txt  investigator_notes.md  network_connections.csv  powershell_history.txt  registry_run_keys.reg  sysmon_processes.csv
schema/: citation_rules.md  lint_rules.md  page_templates.md  wiki_schema.md  workflows.md
src/: __init__.py  benchmark.py  benchmark_methods.py  claim_extractor.py  compare.py  compare_all.py  entity_extractor.py  eval.py  evolve.py  hypothesis_history.py  index.py  ingest.py  lint.py  llm.py  manifest.py  obsidian.py  parsers.py  prompts.py  query.py  rag.py  report.py  review.py  schemas.py  snapshots.py  tracing.py  vector_rag.py  wiki_io.py
src/graph/: __init__.py  graph_export.py  (+2 more)
tests/: conftest.py  test_benchmark.py  test_dry_run.py  test_eval.py  test_evolve.py  test_indexes.py  test_ingest.py  test_lint.py  test_lint_phase2.py  test_live_normalization.py  test_manifest.py  test_phase4_artifacts.py  test_phase5_graphrag.py  test_phase6_mcp_review_obsidian.py  test_phase7_launch.py  test_query.py  test_query_phase2.py  test_rag_and_compare.py  test_report.py  test_snapshots_diff.py  test_structure.py  test_tracing.py  test_vector_rag.py  test_wiki_io.py
(+17 files in other folders)
